After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677109 - Fixes for interactions between background-repeat and background-position
Fixes for interactions between background-repeat and background-position
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2012-05-30 16:16 UTC by Cosimo Cecchi
Modified: 2012-05-30 16:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
reftests: Add a simple reftest for background-position (3.17 KB, patch)
2012-05-30 16:16 UTC, Cosimo Cecchi
committed Details | Review
reftests: add a reftest for repeating/positioned background patterns (4.58 KB, patch)
2012-05-30 16:16 UTC, Cosimo Cecchi
committed Details | Review
themingbackground: fix drawing for repeating positioned images (2.35 KB, patch)
2012-05-30 16:16 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2012-05-30 16:16:10 UTC
This also adds two reftests; one (courtesy of Benjamin) for the simple case of a centered repeating pattern, and the other for more complex positioning of a horizontally-repeating pattern.
Comment 1 Cosimo Cecchi 2012-05-30 16:16:12 UTC
Created attachment 215258 [details] [review]
reftests: Add a simple reftest for background-position

This is mostly to ensure that the background-positioning feature keeps
working and to demonstrate it.
Comment 2 Cosimo Cecchi 2012-05-30 16:16:14 UTC
Created attachment 215259 [details] [review]
reftests: add a reftest for repeating/positioned background patterns

This currently fails.
Comment 3 Cosimo Cecchi 2012-05-30 16:16:17 UTC
Created attachment 215260 [details] [review]
themingbackground: fix drawing for repeating positioned images

When we determine the fill rectangle for an image layer, and the image
is not repeating, we should also position the rectangle according to the
values of background-position, or we will always fill a tiny slice at
the top/left of the clip box.
Comment 4 Cosimo Cecchi 2012-05-30 16:25:50 UTC
Attachment 215258 [details] pushed as 3a8cec5 - reftests: Add a simple reftest for background-position
Attachment 215259 [details] pushed as bce34d8 - reftests: add a reftest for repeating/positioned background patterns
Attachment 215260 [details] pushed as 65166c3 - themingbackground: fix drawing for repeating positioned images

ACK-ed on IRC by Benjamin